mediaquiries.css
/* Small Desktop */
@media (max-width: 1180px) {

  #hero-sec {
    flex-direction: column;
  }

  #about-me .about-body {
    flex-direction: column;
    align-items: center;
  }

}



/* Tablet */

@media (max-width: 768px) {

  html {
    font-size: 10px;
  }


  #nav-bar {
    display: none;
  }

  #nav-bar-mobile {
    display: flex;
  }

  #nav-bar-mobile svg {
    font-size: 32px;
  }


  .image-cont {
    width: 270px;
    height: 270px;
  }

  /* start about section */
  #about-me {
    padding: 0 3rem;
  }



  #about-me .about-img-cont {
    width: 270px;
    height: 270px;
  }

  #about-me .card-container {
    flex-direction: column;
  }


  #experience {
    padding: 5rem;
  }

}


/* Mobile */

@media (max-width: 320px) {

  .image-cont {
    width: 150px;
    height: 150px;
  }


  #about-me .about-img-cont {
    width: 150px;
    height: 150px;
  }

  #experience {
    padding: 3rem;
  }

  #experience .stacks-cont {
    flex-direction: column;
  }


}

